en cours) ré-insérer onTimePasses dans l'affichage pour avoir les animations

--- a/blackjack/build.gradle
+++ b/blackjack/build.gradle
@@ -41,7 +41,7 @@ def commonConfig = {
 
 def localConfig = {
    configure commonConfig
-   mainClass = "blackjack.MonProjetLocal"
+   mainClass = "blackjack.BlackjackLocal"
    jvmArgs('-Dsun.java2d.opengl=true')
 }
 
